--- a/templates/about/index.ejs
+++ b/templates/about/index.ejs
@@ -29,7 +29,7 @@
 
       <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
-          <div class="elementInner cardBorder shadowBoxLt">
+          <div class="elementInner cardBorder borderRadiusS shadowBoxLt">
             <img class="iconM" src="IconSearch.svg" alt="se-arrow">
             <h3 data-aos="fade-up"> <strong> Business &#38; Product Insight:</strong>
             </h3>
@@ -41,7 +41,7 @@
       </div>
       <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
-          <div class="elementInner cardBorder shadowBoxLt">
+          <div class="elementInner cardBorder borderRadiusS shadowBoxLt">
             <img class="iconM" src="IconCategory.svg" alt="se-arrow">
             <h3 data-aos="fade-up"> <strong> Roadmap Contribution &#38; Team Alignment: </strong> </h3>
             <p>Actively contribute to the product roadmap and align goals with cross-functional teams.</p>
@@ -53,7 +53,7 @@
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
-          <div class="elementInner cardBorder shadowBoxLt">
+          <div class="elementInner cardBorder borderRadiusS shadowBoxLt">
             <img class="iconM" src="iconBrush.svg" alt="se-arrow">
 
 
@@ -67,7 +67,7 @@
       </div>
       <div class="Grid-cell" data-aos="flip-up">
         <div class="element">
-          <div class="elementInner cardBorder shadowBoxLt">
+          <div class="elementInner cardBorder borderRadiusS shadowBoxLt">
             <img class="iconM" src="IconDocument.svg" alt="se-arrow">
 
 
