--- a/templates/architecture/index.ejs
+++ b/templates/architecture/index.ejs
@@ -76,7 +76,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./recreation_commons/">
           <div class="element">
-            <div class="elementCard float cardBorder shadowBoxLt">
+            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
               <img src="./all_sizes_recreation_commons.svg" alt="Appointa">
               <div class="elementInner">
                 <h5>Activity Center</h5>
@@ -98,7 +98,7 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class=" float cardBorder shadowBoxLt">
+          <div class=" float cardBorder borderRadiusS shadowBoxLt">
             <img src="./ar_06.png" alt="Kappe House">
             <div class="elementInner">
               <h5>Form finding exercise </h5>
@@ -132,7 +132,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./narrow_stripes/">
           <div class="element">
-            <div class="elementCard float cardBorder shadowBoxLt">
+            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_02.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Library and infrastructure</h5>
@@ -156,7 +156,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./recovery_of_river_edges/">
           <div class="element">
-            <div class="elementCard float cardBorder shadowBoxLt">
+            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_03.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Pavilion</h5>
@@ -188,7 +188,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./thesis_studio/">
           <div class="element">
-            <div class="elementCard float cardBorder shadowBoxLt">
+            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_07.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>On order: Differenciated</h5>
@@ -210,7 +210,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./the_rotation_of_curves/">
           <div class="element">
-            <div class="elementCard float cardBorder shadowBoxLt">
+            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_05.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Form finding exercise </h5>
@@ -241,7 +241,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./manifold_ground/">
           <div class="element">
-            <div class="elementCard float cardBorder shadowBoxLt">
+            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_04.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Urban public space</h5>
@@ -262,7 +262,7 @@
       <div class="Grid-cell">
         <a class="no-hover-effect" href="./LACAMA/">
           <div class="element">
-            <div class="elementCard float cardBorder shadowBoxLt">
+            <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
               <img src="./ar_08.jpg" alt="Appointa">
               <div class="elementInner">
                 <h5>Musume extension</h5>
