--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -2948,7 +2948,7 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
               <div class="Grid Grid--gutters Grid--cols-2">
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInner cardBorder">
+                    <div class="elementInner cardBorder borderRadiusS">
                       <h4> <strong> Title</strong> </h4>
                       <ul>
                         <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -2965,7 +2965,7 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
                 </div>
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInner cardBorder">
+                    <div class="elementInner cardBorder borderRadiusS">
                       <h4> <strong> Title</strong> </h4>
                       <ul>
                         <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -3000,7 +3000,7 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
                           &lt;div class="Grid Grid--gutters Grid--cols-2"&gt;
                             &lt;div class="Grid-cell"&gt;
                               &lt;div class="element"&gt;
-                                &lt;div class="elementInner cardBorder"&gt;
+                                &lt;div class="elementInner cardBorder borderRadiusS"&gt;
                                   &lt;h4&gt; &lt;strong&gt; Title&lt;/strong&gt; &lt;/h4&gt;
                                   &lt;ul&gt;
                                     &lt;li&gt; Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -3017,7 +3017,7 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
                             &lt;/div&gt;
                             &lt;div class="Grid-cell"&gt;
                               &lt;div class="element"&gt;
-                                &lt;div class="elementInner cardBorder"&gt;
+                                &lt;div class="elementInner cardBorder borderRadiusS"&gt;
                                   &lt;h4&gt; &lt;strong&gt; Title&lt;/strong&gt; &lt;/h4&gt;
                                   &lt;ul&gt;
                                     &lt;li&gt; Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
@@ -3431,7 +3431,7 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
             <div class="Grid-cell">
               <div class="element">
                 <div class="">
-                  <div class="elementCard float cardBorder shadowBoxLt">
+                  <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
                     <img src="./PlaceholderDark_zeroBottomBorderRadius.svg" alt="Placeholder">
                     <div class="element">
                       <div class="element">
@@ -3449,7 +3449,7 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="elementCard float cardBorder shadowBoxLt">
+                <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
                   <img src="./PlaceholderDark_zeroBottomBorderRadius.svg" alt="Placeholder">
                   <div class="element">
                     <div class="element">
@@ -3480,7 +3480,7 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
                           &lt;div class="Grid-cell"&gt;
                             &lt;div class="element"&gt;
                               &lt;div class=""&gt;
-                                &lt;div class="elementCard float cardBorder shadowBoxLt"&gt;
+                                &lt;div class="elementCard float cardBorder borderRadiusS shadowBoxLt"&gt;
                                   &lt;img src="./Placeholder.svg" alt="Placeholder"&gt;
                                   &lt;div class="element"&gt;
                                     &lt;div class="element"&gt;
@@ -3496,7 +3496,7 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
                           &lt;/div&gt;
                           &lt;div class="Grid-cell"&gt;
                             &lt;div class="element"&gt;
-                              &lt;div class="elementCard float cardBorder shadowBoxLt"&gt;
+                              &lt;div class="elementCard float cardBorder borderRadiusS shadowBoxLt"&gt;
                                 &lt;img src="./Placeholder.svg" alt="Placeholder"&gt;
                                 &lt;div class="element"&gt;
                                   &lt;div class="element"&gt;
@@ -4555,7 +4555,7 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
 
                   <div class="dropdown-content">
                     <a href="/glorify/">
-                      <div class="cardBorder GLORIFY">
+                      <div class="cardBorder borderRadiusS GLORIFY">
                         <img src="../../ProjectImages/Cover_Glorify.png" alt="GLORIFY">
                         <div class="element">
                           <h5 class="colorBlack">GLORIFY | Daily worship</h5>
@@ -4563,7 +4563,7 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
                       </div>
                     </a>
                     <a href="/appointa/">
-                      <div class="cardBorder APPOINTA">
+                      <div class="cardBorder borderRadiusS APPOINTA">
                         <img src="../../ProjectImages/Cover_APPOINTA.png" alt="APPOINTA">
                         <div class="element">
                           <h5 class="colorBlack">APPOINTA | Scheduling</h5>
@@ -4571,7 +4571,7 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
                       </div>
                     </a>
                     <a href="/seer/">
-                      <div class="cardBorder SEER ">
+                      <div class="cardBorder borderRadiusS SEER ">
                         <img src="../../ProjectImages/Cover_SEER.png" alt="SEER">
                         <div class="element">
                           <h5 class="colorBlack">SEER | Business performance</h5>
@@ -4579,7 +4579,7 @@ pageURL:'', thumbnailImgURL: 'vickywang_web.png'
                       </div>
                     </a>
                     <a href="/design_system/">
-                      <div class="cardBorder ">
+                      <div class="cardBorder borderRadiusS ">
                         <img src="../../ProjectImages/Cover_portfolioWeb.svg" alt="Design System">
                         <div class="element">
                           <h5 class="colorBlack">Design System | vickywang.me</h5>
