--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -14,8 +14,6 @@
 
   <div class="blankHM"></div>
 
-
-
   <%- include('shared/intro', { 
     version: 'vicky',
     contents: ['UX designer', 'Product designer'],
@@ -32,7 +30,6 @@
 
 
 
-  <div class="blankHS"></div>
   <!-- Arrow -->
   <%- include('shared/arrowSubtitle', {message: 'Case Study' }) %>
   <!-- Arrow -->
@@ -40,13 +37,88 @@
   <!-- Content -->
 
   <div class="wrapper">
+
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
           <a class="no-hover-effect">
-            <div class="elementCard LASO float cardBorder shadowBoxLt">
+            <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
               <div class="img__wrap">
-                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_worksample.png" />
+                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_BYP_AppB2B.png" />
+                <div class="img__description">
+                  <div class="input-field">
+                    <div class="column">
+                      <label for="password">
+                        <h5>Password</h5>
+                      </label>
+                      <input class="PWinputLanding" type="password" id="password" placeholder="Enter password">
+
+                      <div class="pwIncorrectHeight">
+                        <span id="pwIncorrect">Password is incorrect </span>
+                      </div>
+                    </div>
+                    <button class="passwordArr" type="submit">
+                      <img src="./icon/arrow-forward.svg" alt="Enter">
+                      <!--  <i class="fas fa-chevron-right"></i> -->
+                    </button>
+                  </div>
+                </div>
+                <div class="element">
+                  <div class="element">
+                    <h5>Password is required </h5>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>B2B SaaS | Onboarding & Subscription </strong></h3>
+                    <h4>Increase the business onboarding understand BYP & improve the subscription rate </h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <a class="no-hover-effect">
+            <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+              <div class="img__wrap">
+                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_BYP_B2C.png" />
+                <div class="img__description">
+                  <div class="input-field">
+                    <div class="column">
+                      <label for="password">
+                        <h5>Password</h5>
+                      </label>
+                      <input class="PWinputLanding" type="password" id="rxZero" placeholder="Enter password">
+
+                      <div class="pwIncorrectHeight">
+                        <span id="pwIncorrect">Password is incorrect </span>
+                      </div>
+                    </div>
+                    <button class="passwordArr" type="submit">
+                      <img src="./icon/arrow-forward.svg" alt="Enter">
+                      <!--  <i class="fas fa-chevron-right"></i> -->
+                    </button>
+                  </div>
+                </div>
+                <div class="element">
+                  <div class="element">
+                    <h5>Password is required </h5>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>Enhancing the Consumer Booking Flow</strong></h3>
+                    <h4>Increase conversion rates by reducing booking abandonment</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+        </div>
+      </div>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="Grid-cell">
+        <div class="element">
+          <a class="no-hover-effect">
+            <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
+              <div class="img__wrap">
+                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_LASO_AdminPanel.png" />
                 <div class="img__description">
                   <div class="input-field">
                     <div class="column">
@@ -69,7 +141,7 @@
                   <div class="element">
                     <h5>Password is required </h5>
                     <h3 class="arrCard" data-aos="fade-up"><strong>Admin Panel 0 - 1</strong></h3>
-                    <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
+                    <h4>Focus on diffetent type of user management</h4>
                   </div>
                 </div>
               </div>
@@ -80,9 +152,9 @@
       <div class="Grid-cell">
         <div class="element">
           <a class="no-hover-effect">
-            <div class="elementCard LASO float cardBorder shadowBoxLt">
+            <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
               <div class="img__wrap">
-                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_worksample.png" />
+                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_LASO_RX0.png" />
                 <div class="img__description">
                   <div class="input-field">
                     <div class="column">
@@ -105,7 +177,7 @@
                   <div class="element">
                     <h5>Password is required </h5>
                     <h3 class="arrCard" data-aos="fade-up"><strong>RX Zero | Business Shift</strong></h3>
-                    <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
+                    <h4>Focus on business shift overall idea</h4>
                   </div>
                 </div>
               </div>
@@ -120,9 +192,9 @@
       <div class="Grid-cell">
         <div class="element">
           <a class="no-hover-effect">
-            <div class="elementCard LASO float cardBorder shadowBoxLt">
+            <div class="elementCard LASO float cardBorder borderRadiusS shadowBoxLt">
               <div class="img__wrap">
-                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_worksample.png" />
+                <img class="img__img" alt="Work Samples" src="./projectImages/Cover_LASO_CostCalculator.png" />
                 <div class="img__description">
                   <div class="input-field">
                     <div class="column">
@@ -144,8 +216,8 @@
                 <div class="element">
                   <div class="element">
                     <h5>Password is required </h5>
-                    <h3 class="arrCard" data-aos="fade-up"><strong>Product page update</strong></h3>
-                    <h4>Extensive startup experience with full design process immersion and diverse skill set</h4>
+                    <h3 class="arrCard" data-aos="fade-up"><strong>Cost-benefit calculator</strong></h3>
+                    <h4>Focus on user understand RX Zero business model, improve subscription rate</h4>
                   </div>
                 </div>
               </div>
@@ -156,7 +228,7 @@
       <div class="Grid-cell">
         <div class="element">
           <a class="no-hover-effect" href="/glorify/">
-            <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
+            <div class="elementCard GLORIFY float cardBorder borderRadiusS shadowBoxLt">
               <img src="./projectImages/Cover_Glorify.png" alt="GLORIFY">
               <div class="element">
                 <div class="element">
@@ -171,49 +243,13 @@
       </div>
 
     </div>
-    <div class="Grid Grid--gutters Grid--cols-2">
-      <div class="Grid-cell">
-        <div class="element">
-          <a class="no-hover-effect" href="/glorify/">
-            <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
-              <img src="./projectImages/Cover_worksample.png" alt="Booking">
-              <div class="element">
-                <div class="element">
-                  <h5>Booking | Business-Facing</h5>
-                  <h3 class="arrCard" data-aos="fade-up"><strong>B2B SaaS - Onboarding & Subscription</strong></h3>
-                  <h4>Focused on simplifying and refining the onboarding and subscription processes, we aim to facilitate a smooth transition for our B2B clients. This approach is geared towards improving engagement and adoption rates, ultimately driving business growth and customer satisfaction.</h4>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
-      <div class="Grid-cell">
-        <div class="element">
-          <a class="no-hover-effect" href="/glorify/">
-            <div class="elementCard GLORIFY float cardBorder shadowBoxLt">
-              <img src="./projectImages/Cover_worksample.png" alt="Consumer-Facing">
-              <div class="element">
-                <div class="element">
-                  <h5>Service Booking App | Consumer-Facing</h5>
-                  <h3 class="arrCard" data-aos="fade-up"><strong>Enhancing the Consumer Booking Flow</strong></h3>
-                  <h4>Enhancing your booking experience to ensure seamless appointment scheduling, our goal is to
-                    boost conversion rates and minimize booking drop-offs. This streamlined process is designed not
-                    only to increase revenue but also to enhance customer loyalty.</h4>
-                </div>
-              </div>
-            </div>
-          </a>
-        </div>
-      </div>
 
-    </div>
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
           <a class="no-hover-effect" href="/appointa/">
             <div class="">
-              <div class="elementCard float cardBorder APPOINTA shadowBoxLt">
+              <div class="elementCard float cardBorder borderRadiusS APPOINTA shadowBoxLt">
                 <img src="./projectImages/Cover_APPOINTA.png" alt="APPOINTA">
                 <div class="element">
                   <div class="element">
@@ -231,7 +267,7 @@
       <div class="Grid-cell">
         <div class="element">
           <a class="no-hover-effect" href="/seer/">
-            <div class="elementCard float cardBorder SEER shadowBoxLt">
+            <div class="elementCard float cardBorder borderRadiusS SEER shadowBoxLt">
               <img src="./projectImages/Cover_SEER.png" alt="SEER">
               <div class="element">
                 <div class="element">
@@ -252,7 +288,7 @@
   <!-- Content -->
 
   <!-- Arrow -->
-  <%- include('shared/arrowSubtitle', {message: 'Design System & Navigation' }) %>
+  <%- include('shared/arrowSubtitle', {message: 'Design System' }) %>
   <!-- Arrow -->
   <!-- Content -->
 
@@ -262,7 +298,7 @@
         <div class="element">
           <a class="no-hover-effect" href="/design_system/">
             <div class="">
-              <div class="elementCard float cardBorder shadowBoxLt">
+              <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
                 <img src="./projectImages/vicky_website.svg" alt="vickywang.me">
                 <div class="element">
                   <div class="element">
@@ -282,7 +318,7 @@
         <div class="element">
           <a class="no-hover-effect" href="/navigation/">
             <div class="">
-              <div class="elementCard float cardBorder shadowBoxLt">
+              <div class="elementCard float cardBorder borderRadiusS shadowBoxLt">
                 <img src="./projectImages/vicky_website.svg" alt="vickywang.me">
                 <div class="element">
                   <div class="element">
