--- a/templates/navigation/V3/index.ejs
+++ b/templates/navigation/V3/index.ejs
@@ -159,7 +159,7 @@
 
             <div class="dropdown-content">
               <a href="/glorify/">
-                <div class="cardBorder GLORIFY">
+                <div class="cardBorder borderRadiusS GLORIFY">
                   <img src="../../ProjectImages/Cover_Glorify.png" alt="GLORIFY">
                   <div class="element">
                     <h5 class="colorBlack">GLORIFY | Daily worship</h5>
@@ -167,7 +167,7 @@
                 </div>
               </a>
               <a href="/appointa/">
-                <div class="cardBorder APPOINTA">
+                <div class="cardBorder borderRadiusS APPOINTA">
                   <img src="../../ProjectImages/Cover_APPOINTA.png" alt="APPOINTA">
                   <div class="element">
                     <h5 class="colorBlack">APPOINTA | Scheduling</h5>
@@ -175,7 +175,7 @@
                 </div>
               </a>
               <a href="/seer/">
-                <div class="cardBorder SEER ">
+                <div class="cardBorder borderRadiusS SEER ">
                   <img src="../../ProjectImages/Cover_SEER.png" alt="SEER">
                   <div class="element">
                     <h5 class="colorBlack">SEER | Business performance</h5>
@@ -183,7 +183,7 @@
                 </div>
               </a>
               <a href="/design_system/">
-                <div class="cardBorder ">
+                <div class="cardBorder borderRadiusS ">
                   <img src="../../ProjectImages/Cover_portfolioWeb.svg" alt="Design System">
                   <div class="element">
                     <h5 class="colorBlack">Design System | vickywang.me</h5>
