--- a/main.css
+++ b/main.css
@@ -835,7 +835,7 @@ polygon {
     height: auto;
 }
 
-.cardBorder {
+.cardBorder borderRadiusS {
     border: 0.06em solid var(--Grey200);
     border-radius: var(--border-radius);
     -webkit-border-radius: var(--border-radius);
@@ -853,7 +853,7 @@ polygon {
     border-radius: var(--border-radius);
 }
 
-.colorBlue.cardBorder {
+.colorBlue.cardBorder borderRadiusS {
     border: 4px solid var(--AMBlue);
     border-radius: var(--border-radius);
 }
